--- a/my-react-app/public/index.html
+++ b/my-react-app/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <script src="https://kit.fontawesome.com/c301d92c0f.js" crossorigin="anonymous"></script>
   <title>TasteBuds</title>
   <link rel="icon" href="images/title-img.svg" type="image/x-icon">
@@ -39,7 +40,8 @@
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <span class="fa fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav navbar-nav ml-auto">
@@ -90,7 +92,7 @@
 
     <div class="container">
 
-      <h1 class="h1 mb-5">Restaurants Available Now</h1>
+      <h1 class="h1 mb-3">Restaurants Available Now</h1>
 
       <div class="row justify-content-center m-5">
         <div id="stalls"></div>
@@ -108,7 +110,7 @@
       <div id="Shop-1">
 
         <h2 class="h2">Season-6</h2>
-        <span class="badge bg-secondary">Note: The order of the food items denote the availability (from high to low)</span>
+        <span class="badge bg-secondary">Note: The order of the food items denote the availability<br> (from high to low)</span>
 
         <div class="row justify-content-center">
           <div id="food-1"></div>
