--- a/my-react-app/public/failure.html
+++ b/my-react-app/public/failure.html
@@ -24,6 +24,14 @@
 
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
+  <style>
+    #home{
+      display: flex;
+  justify-content: center;
+  padding: 10%;
+  margin-left: 50px;
+    }
+  </style>
 
 </head>
 
@@ -32,12 +40,12 @@
   <!-- ********* Header Starts ********* -->
   <div id="header" class="">
     <nav class="navbar navbar-expand-lg fixed-top navbar-light"
-      style="background: linear-gradient(90deg, rgba(95,30,190,1) 10%, rgba(60,145,255,1) 50%);">
+      style="background: linear-gradient(to right, #24243e, #302b63, #0f0c29);">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img href="#home" src="images/tastebuds.png" alt="Logo" class="head_img d-inline-block align-text-top">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,7 +67,7 @@
               <a class="nav-link" href="localhost:3001/#support">Support</a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
       </div>
 
@@ -68,6 +76,6 @@
 
   </div>
 
-  <div id="home" class=" bg-danger">
-    <h3 class="display-3">Uh Oh! Your Transaction is Not Successful !!</h3>
+  <div id="home">
+    <h3 class="display-3" style="color: rgb(255, 67, 67);">Uh Oh!<br> Your Transaction is Not Successful !!</h3>
   </div>
